--- a/db/migrations.yml
+++ b/db/migrations.yml
@@ -1,4 +1,4 @@
 name: Doctrine Migrations
 migrations_namespace: MyApp\Db\Migrations
 table_name: doctrine_migration_versions
-migrations_directory: ./migrations
+migrations_directory: ./db/migrations
