--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
       context: ./docker/app
     volumes:
       - .:/app
+    working_dir: /app
     ports:
       - "3000:80"
     environment:
